# guam

./: .gitignore  @  Q  README.md  SomeFile.txt  config.toml  guam-orig.py  main.current  main.py  main.py.old  pyproject.toml  requirements.txt  start_guam.sh  utils.py
.github/workflows/: deploy.yml  release.yml
app/: components.py  config.py  main.py  router.py  smb.py
app/models/: autofs.py  secgroup.py  user.py
app/templates/: autofs_groups.html.j2  autofs_mounts.html.j2  index.html  index.html.j2  manage_autofs_groups.html.j2  result.html.j2  secgroups.html.j2  users.html.j2
app/templates/shared/: head.html.j2
app/utils/: autofs.py  groups.py  users.py
guam/: __init__.py  components.py  config.py  router.py  smb.py
guam/models/: autofs.py  secgroup.py  user.py
guam/utils/: autofs.py  groups.py  smb_helpers.py  users.py
systemd/: guam.service
templates/: autofs_groups.html.j2  autofs_mounts.html.j2  form.html  index.html  index.html.old  result.html.j2  secgroups.html.j2  users.html.j2
templates/shared/: head.html.j2  nav.html.j2
